@@ -1,3 +1,15 @@
+2004/05/17 18:03 (+0200) kaffeetisch
+
+	* rsvg2perl.h: Only include <librsvg/rsvg-gz.h> if it's available.
+
+	* t/Rsvg.t: Be a bit more tolerant to pass on older versions.
+	Skip some tests if they're not available in the version we're
+	compiling against.
+
+	* xs/Rsvg.xs: Implement CHECK_VERSION and GET_VERSION_INFO.
+	Protect set_default_dpi, *_ex, new_gz, and set_dpi with version
+	macros.
+
 2004/02/14 16:39 (+0100) kaffeetisch
 
 	A copyright.pod
